objects/OpportunityProductPicklistMap__mdt.object
<CustomObject>
    <fields>
        <fullName>ForStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ForStatus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ForType__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ForType</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <label>Funding Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Premium_Type__c</fullName>
        <label>Premium Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>TextArea</type>
    </fields>
    <label>OpportunityProductPicklistMap</label>
    <pluralLabel>OpportunityProductPicklistMaps</pluralLabel>
</CustomObject>